--- a/RMS-Titanic.ipynb
+++ b/RMS-Titanic.ipynb
@@ -22,8 +22,8 @@
    "metadata": {},
    "source": [
     "<br>On April 15th 1912, the RMS Titanic — the largest ship afloat at the time — struck an iceberg and sank in the North Atlantic Ocean during her maiden voyage, killing more than 1500 people who were on board. To this day, it remains the deadliest peacetime maritime disaster, providing inspiration for many works of fiction and non-fiction — including the 1997 Hollywood film, Titanic, starring Leonardo DiCaprio and Kate Winslet.<br> \n",
-    "<br>It is important to note that we do not have a definitive number of the people who were aboard the Titanic, so all the numbers and details included in this project are estimates. That said, for the purposes of our project, it would suffice to have an estimate of the number of passengers and survivors on board, including some details about the sex, age, ticket class, port of embarkment, etc.<br>\n",
-    "<br>My primary aim here is to build a Machine Learning Model (ML) that can predict whether a passenger survived or not. But before I can do, I will do the following:<br>"
+    "<br>It is important to note that we do not have a definitive number of the people who were aboard the Titanic, so all the numbers and details included in this project are estimates. That said, for the purposes of our project, it would suffice to have an estimate of the number of passengers and survivors on board, including some details about their sex, age, ticket class, port of embarkment, etc.<br>\n",
+    "<br>My primary aim here is to build a Machine Learning Model (ML) that can predict whether a passenger survived or not. But before I can do so, I will do the following:<br>"
    ]
   },
   {
@@ -33,13 +33,12 @@
    "source": [
     "1. Import relevant libraries;\n",
     "2. Import three separate datasets (Train, Test & Gender Submission);\n",
-    "3. Get information on the datasets;\n",
+    "3. Explore the datasets;\n",
     "4. Clean & wrangle the datasets;\n",
-    "5. Explore the datasets;\n",
-    "6. Build 3 ML models and train the training dataset on them; and finally,\n",
-    "7. Evaluate each to see which can best predict the probability of who survived. \n",
+    "5. Build three ML models and train the training dataset on them; and finally,\n",
+    "6. Evaluate each to see which can best predict the probability of who survived. \n",
     "\n",
-    "<br>I will end by stating what factors, I believe, played a significant role in the survival of some passengers but not others, bringing together insights gained from this project and those gleaned from known historical facts about the RMS Titanic.<br>"
+    "<br>I will end by stating what factors, I believe, played a significant role in the survival of some passengers but not others, bringing insights extracted from the data together with those gleaned from known historical facts about the RMS Titanic.<br>"
    ]
   },
   {
@@ -98,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. GET INFO ON DATA"
+    "### 3. EXPLORE THE DATA"
    ]
   },
   {
@@ -106,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3.1. Checking first 5 rows of gender_data"
+    "##### 3.1. Checking first 5 rows of gender_data, train & test"
    ]
   },
   {
@@ -1502,7 +1501,7 @@
    "metadata": {},
    "source": [
     "##### 4.1. Drop Columns & Fill Missing Values\n",
-    "1. Will drop columns ['PassengerId', 'Name', 'Ticket', 'Fare', 'Cabin', 'Embarked'] from both training & test data sets. Their 'Cabin' may have been an important factor in survival (because cabin location closer to the top deck of the ship may have played a favourable role in them getting on the lifeboats. However, with over a thousand missing values in that column, a meaningful analysis or correlation won't be possible)\n",
+    "1. Will drop columns ['PassengerId', 'Name', 'Ticket', 'Fare', 'Cabin', 'Embarked'] from both training & test data sets. Their 'Cabin' number may have been an important factor for survival (because cabins located closer to the top deck of the ship may have played a favourable role in them getting onto the lifeboats more quickly before the ship sank. However, with over a thousand missing values in that column, a meaningful analysis or correlation won't be possible)\n",
     "2. Fill missing value in 'Age' column median age 27.5 (median age in training is 28, in test is 27, so overall median is 27.5)\n"
    ]
   },
@@ -2274,7 +2273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. EVALUATE THE MODELS"
+    "### 6. EVALUATE THE MODELS"
    ]
   },
   {
@@ -2366,11 +2365,11 @@
    "metadata": {},
    "source": [
     "With an accuracy score of 0.92, the Decision Tree Model fares best in predicting the survival of passngers onboard the Titanic.<br>\n",
-    "<br>One would normally have assumed that the age and sex of the survivors might have played a significant, if not deciding factor in determining who survived and who didn't. However, the reality was vastly different, as the above analysis of our datasets show. There was, in fact, a considerably higher proportion of women and children who survived than men. From first-hand accounts of survivors, we know that women and children were the first to be offered a place on the lifeboats soon after the Titanic had struck the iceberg.<br>\n",
-    "<br>An interesting and unxpected correlation was that between the ticket class of the passsenger and their survival, with the group of upper/First Class ticket holders having a significantly higher percentage of survivors than the group of passengers who had the lowest third-class tickets. This can, in part, be explained by the fact that the First Class ticket holders would normally have been staying at cabins on the upper two decks of the ship, meaning they had an easier and quicker access to the lifeboats than those who held Lower Class tickets and were staying in cabins on the lower decks of the ship.<br> \n",
-    "<br>However, this is not the only reason that there is a strong correlation in the data between the ticket class of the passenger and their chance of survival. First-hand wittness accounts tell us that the lifeboats were launched from the First Class decks first and the Second Class decks second. And that there were no decks or lifeboats dedicated to the Third Class.<br>\n",
-    "<br>Finally, although the ship did indeed have lifeboats in case of emergency, there weren't enough of them. Some estimate that there were enough lifeboats to rescue only 50% of those on board.<br>\n",
-    "<br>Perhaps it is due to the RMS Titanic's widespread reputation for being virtually unsinkable, that those who designed and managed her did not even contemplate that a day would soon come where they would need enough lifeboats to rescue all those onboard."
+    "<br>One would normally have assumed that the age and sex of the survivors might have played a significant, if not deciding factor in determining who survived and who didn't. However, the reality was vastly different, as the above analysis of our datasets show. There was, in fact, a considerably higher proportion of women and children who survived than men. Those with siblings or spouses on board also has a significantly higher rate of survival. From first-hand accounts of survivors, we know that women and children were the first to be offered a place on the lifeboats soon after the Titanic had struck the iceberg. This would explain the strong correleations.<br>\n",
+    "<br>An interesting and unxpected correlation was that between the ticket class of the passsenger and their survival, with the group of upper/First Class ticket holders having a significantly higher percentage of survivors than the group of passengers who had the lowest Third Class tickets (62% of First Class ticket holders survived by comparison to only 38% of those with Third Class tickets). This can, in part, be explained by the fact that the First Class ticket holders would normally have been staying at cabins on the upper two decks of the ship, meaning they had an easier and quicker access to the lifeboats than those who held Third Class tickets and who were staying in cabins on the lower decks of the ship.<br> \n",
+    "<br>However, this is not the only reason for the strong correlation between the ticket and a passenger's chance of survival. First-hand wittness accounts tell us that the lifeboats were launched from the First Class decks first and the Second Class decks second. And that there were no decks or lifeboats dedicated to the Third Class.<br>\n",
+    "<br>Finally, although the ship did indeed have lifeboats in case of emergency, there weren't enough of them. Some estimate that there were enough of them to rescue only 50% of those on board.<br>\n",
+    "<br>It is perhaps due to the RMS Titanic's widespread reputation for being virtually unsinkable at the time she sailed, that those who designed and managed her found it inconceivable to even contemplate the possibility that a day would soon come where they would need enough lifeboats to rescue all those on board -- an assumption that not only ended in tragedy, but also etched her on public memory ever since."
    ]
   }
  ],
