--- a/Assignment_9_Fraud.ipynb
+++ b/Assignment_9_Fraud.ipynb
@@ -777,6 +777,8 @@
     }
    ],
    "source": [
+    "# # The cross-tab function above shows that TRANSFER & CASH_OUT are the fraudsters' preferred type of transaction.\n",
+    "\n",
     "# I will now plot relationship between transaction type and fraud below\n",
     "cross_tab_result.plot.bar(figsize=(10,7), rot=0)"
    ]
@@ -1205,7 +1207,7 @@
     "* There's a strong correlation between some types of transactions (in the 'type' column) and whether that transaction is fraudulent, so this is a column I will definitely not drop.\n",
     "* An account's starting balance, and balance after the transfer are also irrelevant since fradulent transactions can take place regardless of account balances.\n",
     "* I have also removed the columns with the names of the customer starting the transaction and the one receiving it to avoid any statistical errors resulting from bias.\n",
-    "* Finally, I have removed the column 'isFraggedFraud' since a transaction's being flagged as fraud is not evidence of its being fraud. Plenty of transactions that get flagged as fraud may turn out to be genuine ones (e.g. a customer goes on holiday without notifying their bank. they use their bank card aboard and the bank's system automatically flaggs it as fraud. When the customer calls their bank and the relevant ID checks and assurances are given, the fraud warning on the transaction is removed, and the bank allows the transaction to go through)."
+    "* Finally, I have removed the column 'isFlaggedFraud' since a transaction's being flagged as fraud doesn't necessarily mean it is actually a fraudulent transaction, nor vice versa."
    ]
   },
   {
