--- a/Assignment_9_Fraud.ipynb
+++ b/Assignment_9_Fraud.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Regulatory bodies, financial institutions, and investment firms are frequently engaged in the surveillance of potential instances of money laundering. They are responsible for identifying and notifying one another about any suspicious activities. \n",
-    "#### Machine learning algorithms can be trained on datasets from banks containing transactions associated with criminal behavior. These models can assist in uncovering covert connections between the movement of funds and illegal activities such as money laundering. \n",
-    "#### Implementing such systems can reduce the burden on smaller and medium-sized banks involved in monitoring activities. Machine learning solutions - similar to the ones found below in this project - have successfully detected 99.6 percent of money laundering transactions, and thus, significantly decreased the number of reported transactions from 30 to 1 percent."
+    "Regulatory bodies, financial institutions, and investment firms are frequently engaged in the surveillance of potential instances of money laundering. They are responsible for identifying and notifying one another about any suspicious activities. \n",
+    "Machine learning algorithms can be trained on datasets from banks containing transactions associated with criminal behavior. These models can assist in uncovering covert connections between the movement of funds and illegal activities such as money laundering. \n",
+    "Implementing such systems can reduce the burden on smaller and medium-sized banks involved in monitoring activities. Machine learning solutions - similar to the ones found below in this project - have successfully detected 99.6 percent of money laundering transactions, and thus, significantly decreased the number of reported transactions from 30 to 1 percent."
    ]
   },
   {
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "### PROBLEM DEFINITION: \n",
-    "#### Given our bank data, can we create a supervised machine learning model to accurately predict whether a transaction is fraudulent or not?"
+    "Given our bank data, can we create a supervised machine learning model to accurately predict whether a transaction is fraudulent or not?"
    ]
   },
   {
@@ -40,11 +40,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### For the task of predicting whether a transaction is fraudulent or not, several supervised machine learning algorithms can be suitable. The choice of the most appropriate model depends on the specific characteristics of our fraud transactions dataset and the trade-offs we are willing to make between model complexity, interpretability, and performance. Given that our data is labelled, and that our aim is to predict whether a transaction is fraudulent or not, our problem can be categorised as a \"Classification\" problem, and our model would have to be a \"Supervised\" one.\n",
-    "#### Below are two machine learning models that are supervised and are commonly used algorithms for binary classification tasks. They are, therefore, well-suited to our database and to our problem:\n",
+    "For the task of predicting whether a transaction is fraudulent or not, several supervised machine learning algorithms can be suitable. The choice of the most appropriate model depends on the specific characteristics of our fraud transactions dataset and the trade-offs we are willing to make between model complexity, interpretability, and performance. Given that our data is labelled, and that our aim is to predict whether a transaction is fraudulent or not, our problem can be categorised as a \"Classification\" problem, and our model would have to be a \"Supervised\" one.\n",
     "\n",
-    "####    1. Logistic Regression: This algorithm is widely used for binary classification. It models the relationship between the features and the probability of the target class using a logistic function. Logistic regression is relatively simple and interpretable, making it a good choice for understanding the impact of individual features in our transaction fraud dataset.\n",
-    "####    2. Decision Trees: Decision trees provide a tree-like model of decisions and their potential consequences. They can handle both numerical and categorical data and are known for their interpretability."
+    "Below are two machine learning models that are supervised and are commonly used algorithms for binary classification tasks. They are, therefore, well-suited to our database and to our problem:\n",
+    "\n",
+    "1. **Logistic Regression**: This algorithm is widely used for binary classification. It models the relationship between the features and the probability of the target class using a logistic function. Logistic regression is relatively simple and interpretable, making it a good choice for understanding the impact of individual features in our transaction fraud dataset.\n",
+    "\n",
+    "2. **Decision Trees**: Decision trees provide a tree-like model of decisions and their potential consequences. They can handle both numerical and categorical data and are known for their interpretability."
    ]
   },
   {
@@ -60,12 +62,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Import Libraries\n",
-    "#### 2. Upload Data\n",
-    "#### 3. Explore Data\n",
-    "#### 4. Prepare Data for Machine Learning\n",
-    "#### 5. Create & Evaluate the 1st Supervised Machine Learning Model: Logistic Regression\n",
-    "#### 6. Create & Evaluate the 2nd Supervised Machine Learning Model: Decision Tree Classifier"
+    "1. Import Libraries\n",
+    "2. Upload Data\n",
+    "3. Explore Data\n",
+    "4. Prepare Data for Machine Learning\n",
+    "5. Create & Evaluate the 1st Supervised Machine Learning Model: Logistic Regression\n",
+    "6. Create & Evaluate the 2nd Supervised Machine Learning Model: Decision Tree Classifier"
    ]
   },
   {
@@ -1662,20 +1664,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The objective of this project was to create a machine learning model to accurately predict whether a transaction is fraudulent or not.\n",
+    "The objective of this project was to create a machine learning model to accurately predict whether a transaction is fraudulent or not.\n",
     "\n",
-    "#### The dataset selected was the *Online Payments Fraud Detection Dataset* from Kaggle: <https://www.kaggle.com/datasets/rupakroy/online-payments-fraud-detection-dataset>\n",
+    "The dataset selected was the *Online Payments Fraud Detection Dataset* from Kaggle: <https://www.kaggle.com/datasets/rupakroy/online-payments-fraud-detection-dataset>\n",
     "\n",
-    "#### This is a dataset of bank transactions which have been classified as fraudulent or not.\n",
+    "This is a dataset of bank transactions which have been classified as fraudulent or not.\n",
     "The size of the dataset is: 6,362,620 rows and 11 columns.\n",
     "\n",
-    "#### To achieve the project's objective, we followed the steps below:\n",
-    "#### 1. Started with some exploration of the data – the dataset's features, their distributions, etc. \n",
-    "#### 2. We then prepared the dataset for machine learning - more specifically, we converted categorical values into numerical ones and dropped irrelavent columns.\n",
-    "#### 3. This was followed by the created of two supervised machine learning models -- Logistic Regression & Decision Tree Classifier -- that we had earlier identified were most suited to the project's aims and to the dataset we are working with.\n",
-    "#### 4. Finally, we evaluated the accuracy of each model using three evaluation methods: Accuracy Score, Confusion Matrix & Classification Report.\n",
+    "To achieve the project's objective, we followed the steps below:\n",
     "\n",
-    "#### Our evaluations showed that both models performed well, with the Decision Tree Model preforming slightly better than the Logistic Regression Model. The table below compares their accuracy scores:\n",
+    "1. Started with some exploration of the data – the dataset's features, their distributions, etc. \n",
+    "2. We then prepared the dataset for machine learning - more specifically, we converted categorical values into numerical ones and dropped irrelavent columns.\n",
+    "3. This was followed by the created of two supervised machine learning models -- Logistic Regression & Decision Tree Classifier -- that we had earlier identified were most suited to the project's aims and to the dataset we are working with.\n",
+    "4. Finally, we evaluated the accuracy of each model using three evaluation methods: Accuracy Score, Confusion Matrix & Classification Report.\n",
+    "\n",
+    "Our evaluations showed that both models performed well, with the Decision Tree Model preforming slightly better than the Logistic Regression Model. The table below compares their accuracy scores:\n",
     "\n"
    ]
   },
