--- a/Assignment_9_Fraud.ipynb
+++ b/Assignment_9_Fraud.ipynb
@@ -1765,13 +1765,13 @@
     "\n",
     "Codes for the model I was trying to fit to data:\n",
     "\n",
-    "* I first tried it like this:\\\n",
-    "RFR = RandomForestClassifier(n_estimators=100, criterion='entropy', random_state=0)\n",
-    "RFR.fit(x_train, y_train)\n",
+    "* I first tried it like this:\n",
+    "> RFR = RandomForestClassifier(n_estimators=100, criterion='entropy', random_state=0)\\\n",
+    "> RFR.fit(x_train, y_train)\n",
     "\n",
-    "* Then I tried it using specific parameters:\\\n",
-    "RFR = RandomForestClassifier(n_estimators=100, criterion='entropy', random_state=0)\n",
-    "RFR.fit(x_train, y_train)\n",
+    "* Then I tried it using specific parameters:\n",
+    "> RFR = RandomForestClassifier(n_estimators=100, criterion='entropy', random_state=0)\\\n",
+    "> RFR.fit(x_train, y_train)\n",
     "\n",
     "But nither would execute in VS Code or Google Colab; they just kept running. This suggests a mis-match between the countries dataset and the Random Forest Classifier model."
    ]
@@ -1793,7 +1793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.-1.-1"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4
  },
