--- a/Assignment_9_Fraud.ipynb
+++ b/Assignment_9_Fraud.ipynb
@@ -1675,7 +1675,7 @@
     "\n",
     "1. Started with some exploration of the data – the dataset's features, their distributions, etc. \n",
     "2. We then prepared the dataset for machine learning - more specifically, we converted categorical values into numerical ones and dropped irrelavent columns.\n",
-    "3. This was followed by the created of two supervised machine learning models -- Logistic Regression & Decision Tree Classifier -- that we had earlier identified were most suited to the project's aims and to the dataset we are working with.\n",
+    "3. This was followed by the created of two supervised machine learning models -- **Logistic Regression** & **Decision Tree Classifier** -- that we had earlier identified were most suited to the project's aims and to the dataset we are working with.\n",
     "4. Finally, we evaluated the accuracy of each model using three evaluation methods: Accuracy Score, Confusion Matrix & Classification Report.\n",
     "\n",
     "Our evaluations showed that both models performed well, with the Decision Tree Model preforming slightly better than the Logistic Regression Model. The table below compares their accuracy scores:\n",
@@ -1759,9 +1759,11 @@
     "N.B. \n",
     "I tried a third supervised machine learning model that is also a classification model called the Random Forest Classifier.\n",
     "\n",
-    "However, when I attempted to build the model, the cell was running for 9 minutes without executing. Seems difficult to try and fit data this size to thise model\n",
-    "I Tried doing this in Google Colab in hope it would work there. However, exactly the same thing happened there: cell was running for 34:58 minutes without executing. \n",
-    "In the end, I interrupted it and had to accept that this RandomForestClassifier model is not a good fit for this database.\n",
+    "However, when I attempted to build the model, the cell was running for 9 minutes without executing. The dataset has over 6 million entries, so I though that may be causing the problem.\n",
+    "\n",
+    "So I decided to try fitting the data to the Random Forest Classifier model on Google Colab. However, that didn't work either: the cell was running for 34:58 minutes on Google Colab without executing.\n",
+    "\n",
+    "In the end, I interrupted it and had to accept that this Random Forest Classifier model is not a good fit for this database.\n",
     "\n",
     "Codes for the model I was trying to fit to data:\n",
     "\n",
