--- a/Assignment_9_Fraud.ipynb
+++ b/Assignment_9_Fraud.ipynb
@@ -1763,7 +1763,7 @@
     "\n",
     "So I decided to try fitting the data to the Random Forest Classifier model on Google Colab. However, that didn't work either: the cell was running for 34:58 minutes on Google Colab without executing.\n",
     "\n",
-    "In the end, I interrupted it and had to accept that this Random Forest Classifier model is not a good fit for this database.\n",
+    "In the end, I interrupted it and had to accept that this Random Forest Classifier model is not a good fit for this dataset.\n",
     "\n",
     "Codes for the model I was trying to fit to data:\n",
     "\n",
