--- a/Assignment_9_Fraud.ipynb
+++ b/Assignment_9_Fraud.ipynb
@@ -1675,7 +1675,7 @@
     "\n",
     "1. Started with some exploration of the data – the dataset's features, their distributions, etc. \n",
     "2. We then prepared the dataset for machine learning - more specifically, we converted categorical values into numerical ones and dropped irrelavent columns.\n",
-    "3. This was followed by the created of two supervised machine learning models -- **Logistic Regression** & **Decision Tree Classifier** -- that we had earlier identified were most suited to the project's aims and to the dataset we are working with.\n",
+    "3. This was followed by the creation of two supervised machine learning models -- **Logistic Regression** & **Decision Tree Classifier** -- that we had earlier identified were most suited to the project's aims and to the dataset we are working with.\n",
     "4. Finally, we evaluated the accuracy of each model using three evaluation methods: Accuracy Score, Confusion Matrix & Classification Report.\n",
     "\n",
     "Our evaluations showed that both models performed well, with the Decision Tree Model preforming slightly better than the Logistic Regression Model. The table below compares their accuracy scores:\n",
@@ -1768,14 +1768,14 @@
     "Codes for the model I was trying to fit to data:\n",
     "\n",
     "* I first tried it like this:\n",
-    "> RFR = RandomForestClassifier(n_estimators=100, criterion='entropy', random_state=0)\\\n",
+    "> RFR = RandomForestClassifier()\\\n",
     "> RFR.fit(x_train, y_train)\n",
     "\n",
     "* Then I tried it using specific parameters:\n",
     "> RFR = RandomForestClassifier(n_estimators=100, criterion='entropy', random_state=0)\\\n",
     "> RFR.fit(x_train, y_train)\n",
     "\n",
-    "But nither would execute in VS Code or Google Colab; they just kept running. This suggests a mis-match between the countries dataset and the Random Forest Classifier model."
+    "But neither would execute in VS Code or Google Colab; they just kept running. This may suggest a mis-match between the countries dataset and the Random Forest Classifier model."
    ]
   }
  ],
