--- a/Assignment_10_Charity.ipynb
+++ b/Assignment_10_Charity.ipynb
@@ -2499,11 +2499,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is a list of 47 under-developed countries predicted and clusterd by our K-Means Cluster Unsupervised Machine Learning Model. \n",
+    "Below is a list of 47 under-developed countries predicted and clusterd by our K-Means Clustering Unsupervised Machine Learning Model. \n",
     "\n",
     "This list will help the charity ensure that it's aid packages and programmes are directed at the countries that need them the most.\n",
     "\n",
-    "Below the list is some insights through visualisations that the chairty might find helpful.\n"
+    "Below the lis, there are some insights through visualisations that the chairty might find helpful.\n"
    ]
   },
   {
