--- a/Assignment_10_Charity.ipynb
+++ b/Assignment_10_Charity.ipynb
@@ -2503,7 +2503,7 @@
     "\n",
     "This list will help the charity ensure that it's aid packages and programmes are directed at the countries that need them the most.\n",
     "\n",
-    "Below the lis, there are some insights through visualisations that the chairty might find helpful.\n"
+    "Directly below the list, there are some insights (through visualisations) that the chairty might find helpful.\n"
    ]
   },
   {
