--- a/Assignment_10_Charity.ipynb
+++ b/Assignment_10_Charity.ipynb
@@ -1007,7 +1007,6 @@
    "source": [
     "* Although there are many columns with outliers in this dataset, I am not going to remove them since the whole point of this project is to identify countries that are most in need of aid. \n",
     "* Leaving the outliers in will allow our model to identify countries that have poverty indicators (i.e. very high child mortality rates, very low income, low exports, very low GDP, etc. by omparison to other countries) and cluster those into a separate clusters.\n",
-    "* In other words, what we want our model to do is precisely this: to capture countries with ouliers and clsuter them accordingly because in doing so, we can identify which countries are in urgent need of aid.\n",
     "* Removing outliers in this kind of project would, therefore, be counter-productive. \n"
    ]
   },
@@ -1675,8 +1674,8 @@
    "source": [
     "The Hopkins statistic score we obtained (in this case 0.8783999588013425) provides an indication of the clustering tendency of our dataset. The score ranges between 0 and 1, where:\n",
     "\n",
-    " 1. Values close to 0 indicate a low clustering tendency, suggesting that the dataset is uniformly distributed or randomly dispersed.\n",
-    " 2. Values close to 1 indicate a high clustering tendency, suggesting that the dataset has distinct clusters or subgroups.\n",
+    "* Values close to 0 indicate a low clustering tendency, suggesting that the dataset is uniformly distributed or randomly dispersed.\n",
+    "* Values close to 1 indicate a high clustering tendency, suggesting that the dataset has distinct clusters or subgroups.\n",
     "\n",
     "Our score suggests that there is a very good clustering tendency in our dataset"
    ]
@@ -1698,9 +1697,7 @@
     "\n",
     "K-Means is a widely used and straightforward iterative unsupervised learning algorithm, differing from supervised learning by not requiring labeled data. Other unsupervised learning methods include PCA (Principle Component Analysis) and K-Medoid. \n",
     "\n",
-    "In K-Means, the algorithm begins by randomly initializing K cluster centroids within the data. The value of K, determined using the Elbow Method, will be discussed later in this tutorial. The algorithm then iteratively adjusts these centroids until their positions no longer change. To gain a better understanding, let's explore the steps involved in K-means clustering.\n",
-    "\n",
-    "Determining the optimal number of clusters is a crucial aspect of this algorithm.\n",
+    "In K-Means, the algorithm begins by randomly initializing K cluster centroids within the data. The algorithm then iteratively adjusts these centroids until their positions no longer change. Determining the optimal number of clusters is a crucial aspect of this algorithm.\n",
     "\n",
     "There are several methods we can use to determine the optimal number of clusters for our dataset (e.g. the Elbow Method, Silhoutte Score, Gap statistic, Density-Based Methods, etc.).\n",
     "\n",
@@ -2499,11 +2496,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is a list of 47 under-developed countries predicted and clusterd by our K-Means Clustering Unsupervised Machine Learning Model. \n",
+    "Below is a list of 47 under-developed countries predicted and clusterd by our K-Means Cluster Unsupervised Machine Learning Model. \n",
     "\n",
     "This list will help the charity ensure that it's aid packages and programmes are directed at the countries that need them the most.\n",
     "\n",
-    "Directly below the list, there are some insights (through visualisations) that the chairty might find helpful.\n"
+    "Below the list is some insights through visualisations that the chairty might find helpful.\n"
    ]
   },
   {
