--- a/Assignment_10_Charity.ipynb
+++ b/Assignment_10_Charity.ipynb
@@ -942,7 +942,7 @@
     "* Naturally, there's a similar positive correlation between a country's GDP and it's 'exports' since the higher the country's exports, the higher will its 'income' be, and hence, the higher its GDP. This usually has a positive knowck effect on inflation, and as the above plot shows, the high a country's income, the higher its GDP. And the higher its GDP, the lower its inflation rate. The inverse will also be true: the lower the country's income, the lower its GDP, and the higher its inflation rate.\n",
     "* There's an inverse correlation between (high) GDP and (low) inflation. Again, this is unsurprising.\n",
     "* There's an inverse correlation between GDP & child mortality rates, meaning that the higher the GDP per person, the lower the child mortality rate in that country. Interestingly, there seems to be an even stronger correlation between GDP and child mortality than 'health' spending and child mortality. \n",
-    "* Surprisingly, there's an inverse correlation between total fertility rate and GDP per person, suggesting that countries with lower GDPs per person may in fact have a higher fertility rate. However, this may be due to the fact that in developing countries, there may be limited access (or difficulty of access) to good healthcare & to birth control medication/methods. "
+    "* Surprisingly, there's an inverse correlation between total fertility rate and GDP per person, suggesting that countries with lower GDPs per person may in fact have a higher fertility rate. However, this may be due to the fact that in developing countries, there may be limited access (or difficulty of access) to good healthcare, family planning & to birth control. "
    ]
   },
   {
@@ -2137,7 +2137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Again, the clustering fits well with the previous plots and our understanding on under-developed countries. As we can see here, cluster 1 has low income, cluster 0 high income, and cluster 2 medium income. Against, this fits well with the GDPP plot earlier and what we said earlier."
+    "* Again, our model's clustering fits well with the previous plots and our understanding on under-developed countries. As we can see here, cluster 1 has low income, cluster 0 high income, and cluster 2 medium income. Again, this fits well with the GDPP plot earlier and what we said earlier."
    ]
   },
   {
