--- a/Assignment_10_Charity.ipynb
+++ b/Assignment_10_Charity.ipynb
@@ -942,7 +942,7 @@
     "* Naturally, there's a similar positive correlation between a country's GDP and it's 'exports' since the higher the country's exports, the higher will its 'income' be, and hence, the higher its GDP. This usually has a positive knowck effect on inflation, and as the above plot shows, the high a country's income, the higher its GDP. And the higher its GDP, the lower its inflation rate. The inverse will also be true: the lower the country's income, the lower its GDP, and the higher its inflation rate.\n",
     "* There's an inverse correlation between (high) GDP and (low) inflation. Again, this is unsurprising.\n",
     "* There's an inverse correlation between GDP & child mortality rates, meaning that the higher the GDP per person, the lower the child mortality rate in that country. Interestingly, there seems to be an even stronger correlation between GDP and child mortality than 'health' spending and child mortality. \n",
-    "* Surprisingly, there's an inverse correlation between total fertility rate and GDP per person, suggesting that countries with lower GDPs per person may in fact have a higher fertility rate. However, this may be due to the fact that in developing countries, there may be limited access (or difficulty of access) to good healthcare, family planning & to birth control. "
+    "* Surprisingly, there's an inverse correlation between total fertility rate and GDP per person, suggesting that countries with lower GDPs per person may in fact have a higher fertility rate. However, this may be due to the fact that in developing countries, there may be limited access (or difficulty of access) to good healthcare, family planning & birth control."
    ]
   },
   {
@@ -1701,7 +1701,7 @@
     "\n",
     "There are several methods we can use to determine the optimal number of clusters for our dataset (e.g. the Elbow Method, Silhoutte Score, Gap statistic, Density-Based Methods, etc.).\n",
     "\n",
-    "Here, we will perform the Elbow Method. The Elbow Method is commonly employed as a means to find the most suitable K value  In this method, we run the K-means clustering algorithm for a range of cluster numbers and plot the within-cluster sum of squares (WCSS) or the sum of squared distances between each point and its centroid. The plot resembles an elbow, and the optimal number of clusters is typically located at the \"elbow\" or the point of diminishing returns, where the decrease in WCSS slows down significantly."
+    "Here, we will perform the Elbow Method. The Elbow Method is commonly employed as a means to find the most suitable K value.  In this method, we run the K-means clustering algorithm for a range of cluster numbers and plot the within-cluster sum of squares (WCSS) or the sum of squared distances between each point and its centroid. The plot resembles an elbow, and the optimal number of clusters is typically located at the \"elbow\" or the point of diminishing returns, where the decrease in WCSS slows down significantly."
    ]
   },
   {
@@ -2137,7 +2137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Again, our model's clustering fits well with the previous plots and our understanding on under-developed countries. As we can see here, cluster 1 has low income, cluster 0 high income, and cluster 2 medium income. Again, this fits well with the GDPP plot earlier and what we said earlier."
+    "* Again, the clustering fits well with the previous plots and our understanding on under-developed countries. As we can see here, cluster 1 has low income, cluster 0 high income, and cluster 2 medium income. Against, this fits well with the GDPP plot earlier and what we said earlier."
    ]
   },
   {
@@ -2496,11 +2496,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is a list of 47 under-developed countries predicted and clusterd by our K-Means Cluster Unsupervised Machine Learning Model. \n",
+    "Below is a list of 47 under-developed countries predicted and clusterd by our Unsupervised K-Means Clustering Machine Learning Model. \n",
     "\n",
-    "This list will help the charity ensure that it's aid packages and programmes are directed at the countries that need them the most.\n",
+    "This list will help the charity ensure that it's aid packages and programmes are directed at the countries that need them most.\n",
     "\n",
-    "Below the list is some insights through visualisations that the chairty might find helpful.\n"
+    "Directly below the list, there are some ignights, communicated with the aid of visualisations, that the chairty might find helpful. The visualisations explain how our model has clustered the data.\n"
    ]
   },
   {
