--- a/Assignment_10_Charity.ipynb
+++ b/Assignment_10_Charity.ipynb
@@ -2500,7 +2500,7 @@
     "\n",
     "This list will help the charity ensure that it's aid packages and programmes are directed at the countries that need them most.\n",
     "\n",
-    "Directly below the list, there are some ignights, communicated with the aid of visualisations, that the chairty might find helpful. The visualisations explain how our model has clustered the data.\n"
+    "Directly below the list, there are some insights, communicated with the aid of visualisations, that the chairty might find helpful. The visualisations explain how our model has clustered the data.\n"
    ]
   },
   {
