--- a/Assignment_11_Uni-Attrition.ipynb
+++ b/Assignment_11_Uni-Attrition.ipynb
@@ -134,12 +134,13 @@
     "5. Build & Train Supervised Machine Learning Models:\n",
     "- 5.1. Logistic Regression\n",
     "- 5.2. K-nearest Neighbor (KNN)\n",
-    "- 5.3. Decision Tree Classifier\n",
-    "- 5.4. Naive Bayes\n",
-    "- 5.5. Support Vector Classification (SVC)\n",
+    "- 5.3. Random Forest Classifier\n",
+    "- 5.4. Decision Tree Classifier\n",
+    "- 5.5. Naive Bayes\n",
+    "- 5.6. Support Vector Classification (SVC)\n",
     "6. Improve Machine Learning Models: Hyper-parameter Tuning\n",
-    "7. Evaluate the Models to Identify the best for this project\n",
-    "8. Feature Importance for the best Machine Learning Model"
+    "7. Evaluate the best ML Model\n",
+    "8. Feature Importance"
    ]
   },
   {
